fix text align issue for mobile view

--- a/css/application.css
+++ b/css/application.css
@@ -98,7 +98,7 @@ section .about {
   flex-direction: column; }
   section .about h1 {
     font-size: 2em;
-    text-align: left;
+    text-align: center;
     letter-spacing: 10px;
     margin-bottom: 1em; }
   section .about p {
