--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -155,7 +155,7 @@ section .home {
   flex-direction: column;
     h1 {
       font-size: 2em;
-      text-align: left;
+      text-align: center;
       letter-spacing: 10px;
       margin-bottom: 1em;
     }
